test/spec_vectors/memory/fail/module_27.wat
(module (memory 4294967296 4294967296))